--- a/THK_Chill_Music_Corner/settings.gradle
+++ b/THK_Chill_Music_Corner/settings.gradle
@@ -10,8 +10,14 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
+
     }
 }
 
 rootProject.name = "THK_Chill_Music_Corner"
 include ':app'
+include ':lib:extensions'
+include ':lib:icons_pack'
+include ':lib:mediaplayer'
+include ':lib:utils'
